# veeam-software

./: .gitignore  README.md  makefile  pyproject.toml
dir_sync/: arg_parse.py  scan.py  sync.py
dir_sync/script/: sync.py
dir_sync/test/: s.py
tests/: test_copy_file.py  test_scan.py
