[tool.poetry]
name = "veeam"
version = "0.1.0"
description = ""
authors = ["grins"]
packages = [
  { include = "dir_sync" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync = "dir_sync.scripts.main:main"
