[tool.poetry]
name = "veeam"
version = "0.1.0"
description = ""
authors = ["grins"]
packages = [
  { include = "dir_sync" },
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
crequires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync = "dir_sync.script.sync:main"
